--- a/article/art_list.html
+++ b/article/art_list.html
@@ -94,4 +94,6 @@
 <script src="/assets/lib/layui/layui.all.js"></script>
 <script src="/assets/js/baseAPI.js"></script>
 <script src="/assets/js/article/art_list.js"></script>
+<script src="/assets/lib/tinymce/tinymce.min.js"></script>
+<script src="/assets/lib/tinymce/tinymce_setup.js"></script>
 </html>
